# code-analyzer

./: .gitignore  README.md  pyproject.toml  sample_report.html
src/code_analyzer/: __init__.py  cli.py
src/code_analyzer/analyzers/: __init__.py  ai_security.py  performance.py  security.py
src/code_analyzer/config/: __init__.py  models.py
src/code_analyzer/config/profiles/: default.yaml  fintech.yaml  performance.yaml
src/code_analyzer/fixers/: __init__.py  ast_fixer.py  base.py
src/code_analyzer/reporters/: __init__.py  html.py  json_reporter.py
tests/: __init__.py  test_analyzers.py  test_config.py
tests/fixtures/: ai_issues.py  insecure_code.py  slow_code.py
