[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-analyzer"
version = "0.1.0"
description = "AI-powered code performance, security, and fix generator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Code Analyzer Team"}
]
keywords = ["code-analysis", "performance", "security", "ai", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    # Core
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    
    # AST Analysis
    "ast-decompiler>=0.7.0",
    "astor>=0.8.1",
    
    # Performance profiling
    "memray>=1.12.0",
    "py-spy>=0.3.14",
    
    # Security
    "bandit>=1.7.8",
    "safety>=3.0.0",
    
    # LLM / AI
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "tiktoken>=0.7.0",
    
    # Reporting
    "jinja2>=3.1.0",
    "rich>=13.7.0",
    "tabulate>=0.9.0",
    
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    
    # Utilities
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
code-analyzer = "code_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=code_analyzer --cov-report=term-missing --cov-report=html"
